--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-04-09  Adam Fedor  <fedor@gnu.org>
+
+	* Version 0.5.6
+
+	* Contains bug fixes in gui/Model.
+
 1999-03-14  Adam Fedor  <fedor@gnu.org>
 
 	* Initial version 0.5.5
