--- a/Documentation/news.tmpl.texi
+++ b/Documentation/news.tmpl.texi
@@ -9,6 +9,12 @@
 
 The currently released version is @samp{@value{NIB2MOD-VERSION}}.
 
+@section Noteworthy changes in version @samp{0.5.6}
+
+Some of the translation problems have been fixed. Still needs better testing.
+
+@c Don't need to include older changes in announce
+@ifclear ANNOUNCE-ONLY
 @section Noteworthy changes in version @samp{0.5.5}
 
 This is the first release of the nib2gmodel tool on its own. It was
@@ -17,3 +23,5 @@ previouly (and still is) a part of the core libraries.
 There are known problems with this release. Worst of all being that nib2gmodel
 doesn't completely convert all GUI Objects, such as Matrices, etc. Hopefully
 a fixed up version will be coming soon.
+
+@end ifclear
