--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,13 @@
 NEWS
 ****
 
-The currently released version is `0.5.5'.
+The currently released version is `0.5.6'.
+
+Noteworthy changes in version `0.5.6'
+=====================================
+
+   Some of the translation problems have been fixed. Still needs better
+testing.
 
 Noteworthy changes in version `0.5.5'
 =====================================
