--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 1999-05-01  Adam Fedor  <fedor@gnu.org>
 
-	* GNUmakefile (header-links): Remove Version before relinking.
+	* GNUmakefile.in (header-links): Remove Version before relinking.
 
 1999-04-09  Adam Fedor  <fedor@gnu.org>
 
