--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-03  Adam Fedor  <fedor@gnu.org>
+
+	* config.guess, configu.sub: Update to latest versions
+
 1999-07-16  Adam Fedor  <fedor@gnu.org>
 
 	* GNUmakefile.in: Rename pacakge to nib2gmodel. Statically link
