--- a/Documentation/news.tmpl.texi
+++ b/Documentation/news.tmpl.texi
@@ -8,14 +8,21 @@
 
 The currently released version is @samp{@value{NIB2MOD-VERSION}}.
 
-@section Noteworthy changes in version @samp{0.5.6}
+@section Noteworthy changes in version @samp{0.6.0}
 @end ifclear
+
+nib2gmodel has been ported to MacOSX.
+
+Several bug fixes allow better translation of various classes, including
+NSBox and NSPopUpButton.
+
+@c Don't need to include older changes in announce
+@ifclear ANNOUNCE-ONLY
+@section Noteworthy changes in version @samp{0.5.6}
 
 The package name has changed from nib2model to nib2gmodel. The name of the
 tool is still called nib2gmodel.
 
-@c Don't need to include older changes in announce
-@ifclear ANNOUNCE-ONLY
 @section Noteworthy changes in version @samp{0.5.6}
 
 Some of the translation problems have been fixed. Still needs better testing.
