--- a/INSTALL
+++ b/INSTALL
@@ -7,13 +7,13 @@ This file documents the installation of the GNUstep nib2gmodel tool.
 distribute, and modify it freely as long as you preserve this copyright
 notice and permission notice.
 
-   This is version 0.5.6 of GNUstep.
+   This is version 0.6.0 of GNUstep.
 
 Installing `gnustep'
 ====================
 
-   The nib2gmodel tool only runs on OpenStep 4.x. It's possible it will
-run on other versions of OPENSTEP, such as MacOS X, but it has not been
+   The nib2gmodel tool runs on OpenStep 4.x and MacOSX Server. It's
+possible it will run on other versions of OPENSTEP, but it has not been
 tried yet.
 
    Here is a quick-and-dirty example of installation commands:
