Update for versino 0.6.2
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk@4982 72102866-910b-0410-8b05-ffd578937521

--- a/Documentation/news.tmpl.texi
+++ b/Documentation/news.tmpl.texi
@@ -8,8 +8,12 @@
 
 The currently released version is @samp{@value{NIB2MOD-VERSION}}.
 
-@section Noteworthy changes in version @samp{0.6.0}
+@section Noteworthy changes in version @samp{0.6.2}
 @end ifclear
+
+A few bug fixes in the gmodel code.
+
+@section Noteworthy changes in version @samp{0.6.0}
 
 nib2gmodel has been ported to MacOSX.
 
