--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-10-09    <fedor@gnu.org>
+
+	* Version: 0.6.2
+	* Minor fixes in code.
+
 1999-09-11  Adam Fedor  <fedor@gnu.org>
 
 	* Version: 0.6.1
