--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-1999-10-09    <fedor@gnu.org>
+2000-01-25 Adam Fedor  <fedor@gnu.org>
+
+	* confiure.in: Use /usr/local as default install if GNUSTEP_SYSTEM_ROOT
+	not set.
+	* GNUmakefile.in: Override default installation and just install
+	nib2gmodel directly.
+
+1999-10-09 Adam Fedor  <fedor@gnu.org>
 
 	* Version: 0.6.2
 	* Minor fixes in code.
