--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-01-26 Adam Fedor  <fedor@gnu.org>
+
+	* gui/Model/GMAppkit.m ([NSMenuItem -encodeWithModelArchiver:]):
+	Check to see if object responds to various selectors before
+	invoking them.
+
 2000-01-25 Adam Fedor  <fedor@gnu.org>
 
 	* confiure.in: Use /usr/local as default install if GNUSTEP_SYSTEM_ROOT
