--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-02-10  Adam Fedor  <fedor@gnu.org>
+
+	* config.guess: New version.
+	* config.sub: Likewise.
+
 2000-01-26 Adam Fedor  <fedor@gnu.org>
 
 	* gui/Model/GMAppkit.m ([NSMenuItem -encodeWithModelArchiver:]):
