--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-03-02  Adam Fedor  <fedor@gnu.org>
+
+	* Version 0.6.5 released.
+
 2000-02-10  Adam Fedor  <fedor@gnu.org>
 
 	* config.guess: New version.
