--- a/Documentation/news.tmpl.texi
+++ b/Documentation/news.tmpl.texi
@@ -8,8 +8,15 @@
 
 The currently released version is @samp{@value{NIB2MOD-VERSION}}.
 
-@section Noteworthy changes in version @samp{0.6.2}
+@section Noteworthy changes in version @samp{0.6.5}
 @end ifclear
+
+Menu and Popup Button translation has been fixed. Nib2gmodel now
+runs better on MacOSX.
+
+@c Don't need to include older changes in announce
+@ifclear ANNOUNCE-ONLY
+@section Noteworthy changes in version @samp{0.6.2}
 
 A few bug fixes in the gmodel code.
 
@@ -20,8 +27,6 @@ nib2gmodel has been ported to MacOSX.
 Several bug fixes allow better translation of various classes, including
 NSBox and NSPopUpButton.
 
-@c Don't need to include older changes in announce
-@ifclear ANNOUNCE-ONLY
 @section Noteworthy changes in version @samp{0.5.6}
 
 The package name has changed from nib2model to nib2gmodel. The name of the
