--- a/Documentation/readme.tmpl.texi
+++ b/Documentation/readme.tmpl.texi
@@ -15,27 +15,13 @@ consist of everything from foundation classes, such as dictionaries and
 arrays, to GUI interface classes such as windows, sliders, buttons, etc.
 
 nib2gmodel is a tool developed for GNUstep which converts Apple/NeXT
-OpenStep 4.x nib files (and perhaps other nib files) to the GNUstep
+OpenStep 4.x and MacOSX nib files (and perhaps other nib files) to the GNUstep
 version of a nib file called a gmodel file.
 
 The file @file{INSTALL} gives instructions for installing the package.
 
 The GNUstep web site at @url{http://www.gnustep.org} conatins more 
 information.
-
-For documentation on individual libraries, look in the documentation
-section/directory for that library.
-
-The GNUstep libraries are covered under the GNU Public Library License.
-This means you can use these libraries in any program (even non-free
-programs) as long as you make the source and improvements you have made
-to the libraries freely available. You should read the COPYING.LIB file
-for more information.
-
-GNUstep tools, test programs, and other files are covered under the
-GNU Public License. This means if you make changes to these programs,
-you cannot charge a fee, other than distribution fees, for others to
-use the program. You should read the COPYING file for more information.
 
 @section How can you help?
 
