--- a/INSTALL
+++ b/INSTALL
@@ -7,7 +7,7 @@ This file documents the installation of the GNUstep nib2gmodel tool.
 distribute, and modify it freely as long as you preserve this copyright
 notice and permission notice.
 
-   This is version 0.6.2 of GNUstep.
+   This is version 0.6.5 of nib2gmodel.
 
 Installing `gnustep'
 ====================
@@ -18,7 +18,7 @@ tried yet.
 
    Here is a quick-and-dirty example of installation commands:
 
-     ./configure --prefix=/usr/local/GNUstep
+     ./configure
      make
      make install
 
@@ -28,12 +28,7 @@ tried yet.
 
    for special options you can add to configure.
 
-   The nib2gmodel program is intalled in a deep directory structure. For
-instance, on a m68k OpenStep 4.x system, it is installed in
-`/usr/local/GNUstep/Tools/m68k/nextstep4/nx-nx-nx-nil/nib2gmodel'.  You
-may want to link this file to /usr/local/bin to make it easier to use.
-In the future, we may offer a "shallow" install feature to put it
-automatically in /usr/local/bin (or a similar dir).
+   By default, the nib2gmodel program is intalled in /usr/local/bin.
 
    Ignore any messages about "Cannot find libtiff library" during
 configuration.  The libtiff library is not needed for nib2gmodel.
