--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-09  Adam Fedor  <fedor@gnu.org>
+
+	* Documenataion/news.tmpl.texi: Updated.
+
 2000-03-02  Adam Fedor  <fedor@gnu.org>
 
 	* Version 0.6.5 released.
