--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,13 @@
 NEWS
 ****
 
-The currently released version is `0.6.5'.
+The currently released version is `0.6.6'.
+
+Noteworthy changes in version `0.6.5'
+=====================================
+
+   Archiving of NSText and NSTextView was added. Better coding of
+NSScrollView, NSButton, Menus, Cells. NSSliderCell added.
 
 Noteworthy changes in version `0.6.5'
 =====================================
