--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 README
 ******
 
-This is version 0.6.5 of the GNUstep nib2gmodel tool
+This is version 0.6.6 of the GNUstep nib2gmodel tool
 
-   GNUstep is a set of general-purpose Objective-C libraries base on the
-OpenStep standard developed by NeXT (now Apple) Inc. The libraries
+   GNUstep is a set of general-purpose Objective-C libraries based on
+the OpenStep standard developed by NeXT (now Apple) Inc. The libraries
 consist of everything from foundation classes, such as dictionaries and
 arrays, to GUI interface classes such as windows, sliders, buttons, etc.
 
@@ -14,7 +14,7 @@ GNUstep version of a nib file called a gmodel file.
 
    The file `INSTALL' gives instructions for installing the package.
 
-   The GNUstep web site at `http://www.gnustep.org' conatins more
+   The GNUstep web site at <http://www.gnustep.org> conatins more
 information.
 
 How can you help?
