--- a/INSTALL
+++ b/INSTALL
@@ -9,8 +9,8 @@ notice and permission notice.
 
    This is version 0.6.6 of nib2gmodel.
 
-Installing `gnustep'
-====================
+Installing `nib2gmodel'
+=======================
 
    The nib2gmodel tool runs on OpenStep 4.x and MacOSX Server. It's
 possible it will run on other versions of OPENSTEP, but it has not been
@@ -32,4 +32,15 @@ tried yet.
 
    Ignore any messages about "Cannot find libtiff library" during
 configuration.  The libtiff library is not needed for nib2gmodel.
+
+Converting nibs
+===============
+
+   To convert a nib file, simply type something like
+
+     nib2gmodel MyNib.nib MyNib.gmodel
+
+   Make sure you have installed the binary and it is in your path. Note
+that you have to be logged in to an OpenStep terminal (such that the
+program can connect to the window server).
 
