--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-25  Adam Fedor  <fedor@gnu.org>
+
+	* Documenataion/install.tmpl.texi: Updated.
+
 2000-08-09  Adam Fedor  <fedor@gnu.org>
 
 	* Documenataion/news.tmpl.texi: Updated.
