--- a/INSTALL
+++ b/INSTALL
@@ -19,10 +19,10 @@ tried yet.
    Here is a quick-and-dirty example of installation commands:
 
      ./configure
-     make
-     make install
+     gnumake
+     gnumake install
 
-   Note that on some OpenStep systems you must use `gnumake' instead of
+   Note that on many OpenStep systems you must use `gnumake' instead of
 `make', since the standard make does not have the correct GNU
 extensions.  For special options you can add to configure, type
 
