--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-31  Adam Fedor  <fedor@gnu.org>
+
+	* Version 0.6.6 released.
+
 2000-08-25  Adam Fedor  <fedor@gnu.org>
 
 	* Documenataion/install.tmpl.texi: Updated.
