Remove use of tmpl.texi files
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk@8067 72102866-910b-0410-8b05-ffd578937521

--- a/Documentation/announce.texi
+++ b/Documentation/announce.texi
@@ -2,7 +2,7 @@
 @set ANNOUNCE-ONLY
 
 @c set the vars GNUSTEP-VERSION and GNUSTEP-GCC
-@include version.tmpl.texi
+@include version.texi
 
 @section What is nib2gmodel?
 @include readme.texi
