--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-06  Adam Fedor  <fedor@gnu.org>
+
+	* Documentation: Remove use of tmpl.texi files
+
 2000-08-31  Adam Fedor  <fedor@gnu.org>
 
 	* Version 0.6.6 released.
