--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-07-24  Adam Fedor  <fedor@gnu.org>
+
+	* Version: 0.7.0
+
 2001-07-08  Adam Fedor  <fedor@gnu.org>
 
 	* GNUmakefile.in: Standardize make so it could be built on other
