--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-30  Adam Fedor  <fedor@gnu.org>
+
+	* GNUmakefile.in: Remove old dependancies.
+
 2001-07-24  Adam Fedor  <fedor@gnu.org>
 
 	* Version: 0.7.0
