--- a/Documentation/readme.texi
+++ b/Documentation/readme.texi
@@ -52,6 +52,6 @@ machines.
 @itemize @bullet
 @item OpenStep 4.x/m68k
 @item OpenStep 4.x/ix86
-@item MacOS X Server
+@item MacOS X Server 1.0
 @end itemize
 
