--- a/Documentation/install.texi
+++ b/Documentation/install.texi
@@ -15,7 +15,7 @@ This is version @value{NIB2MOD-VERSION} of nib2gmodel.
 
 @section Installing @samp{nib2gmodel}
 
-The nib2gmodel tool runs on OpenStep 4.x and MacOSX Server. It's possible it 
+The nib2gmodel tool runs on OpenStep 4.x and MacOSX 10.x. It's possible it 
 will run on other versions of OPENSTEP, but it has not been
 tried yet.
 
