--- a/Documentation/news.texi
+++ b/Documentation/news.texi
@@ -9,14 +9,18 @@
 The currently released version is @samp{@value{NIB2MOD-VERSION}}.
 @end ifclear
 
-@section Noteworthy changes in version @samp{0.7.0}
+@section Noteworthy changes in version @samp{0.8.0}
 
-Bug fixes. NSSecureTextField support. Updated for changes in NSMenu code,
-and new NSWindow ivars.
+Bug fixes, including a workaround for a bug in MacOSX 10.1.x.
 
 @c --------------------------------------------------------
 @c Don't need to include older changes in announce
 @ifclear ANNOUNCE-ONLY
+
+@section Noteworthy changes in version @samp{0.7.0}
+
+Bug fixes. NSSecureTextField support. Updated for changes in NSMenu code,
+and new NSWindow ivars.
 
 @section Noteworthy changes in version @samp{0.6.5}
 
