--- a/Documentation/readme.texi
+++ b/Documentation/readme.texi
@@ -15,8 +15,7 @@ consist of everything from foundation classes, such as dictionaries and
 arrays, to GUI interface classes such as windows, sliders, buttons, etc.
 
 nib2gmodel is a tool developed for GNUstep which converts Apple/NeXT
-OpenStep 4.x and MacOSX nib files (and perhaps other nib files) to the GNUstep
-version of a nib file called a gmodel file.
+OpenStep 4.x and MacOSX nib files to a GNUstep gmodel file.
 
 Note that nib2gmodel does a pretty good, but not a perfect job of 
 translating nib files. Since the nib format is not documented, translation
@@ -30,23 +29,9 @@ The file @file{INSTALL} gives instructions for installing the package.
 The GNUstep web site at @url{http://www.gnustep.org} contains more 
 information.
 
-@section How can you help?
-
-@itemize @bullet
-@item
-Check the bug list at the GNUstep web site, or subscribe to
-the GNUstep newslists for information.
-If you can volunteer for any of the projects, or if you have any useful
-comments send email!  @email{discuss-gnustep@@gnu.org}
-
-@item
-Give us feedback!  Tell us what you like; tell us what you think
-could be better.  Send bug reports to @email{bug-gnustep@@gnu.org}.
-@end itemize
-
 @section Machines
 
-GNUstep nib2gmodel has been compiled (in the past) on the following
+GNUstep nib2gmodel has been compiled (sometime in the past) on the following
 machines.
 
 @itemize @bullet
