Make sure headers don't conflict with MacOSX headers
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk@15201 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-12-02  Adam Fedor  <fedor@gnu.org>
+
+	* GNUmakefile.in (GNUSTEP_OBJ_DIR): Simplify.
+	(header-links): Don't make AppKit and DPSClient links.
+
 2002-11-15  Adam Fedor  <fedor@gnu.org>
 
 	* configure.ac: Upgrade to autoconf 2.50
