--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-03  Adam Fedor  <fedor@gnu.org>
+
+	* GNUmakefile.in (GNUSTEP_BUILD_ROOT): Fix path.
+
 2002-12-02  Adam Fedor  <fedor@gnu.org>
 
 	* GNUmakefile.in (GNUSTEP_OBJ_DIR): Simplify.
