Set default prefix to local dir.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk@15278 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-12-10  Adam Fedor  <fedor@gnu.org>
+
+	* GNUmakefile.in (LIBRARY_COMBO): Define.
+	Always set SHARED_FLAG=no
+	* configure.ac: Set default prefix to a local directory.
+
 2002-12-03  Adam Fedor  <fedor@gnu.org>
 
 	* GNUmakefile.in (GNUSTEP_BUILD_ROOT): Fix path.
