Fix darwin compile
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk@16867 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-05  Adam Fedor  <fedor@Eldorado.local.>
+
+	* configure.ac: Set library-combo correctly for darwin
+	* GNUmakefile.in: Define GNUSTEP_MAKEFILES
+
 2002-12-10  Adam Fedor  <fedor@gnu.org>
 
 	* GNUmakefile.in: Fixup subproj-clean, etc to work.
