--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-12  Adam Fedor  <fedor@gnu.org>
+
+	* Version: 0.8.6
+
 2003-06-05  Adam Fedor  <fedor@gnu.org>
 
 	* configure.ac: Set library-combo correctly for darwin
