--- a/Documentation/news.texi
+++ b/Documentation/news.texi
@@ -9,13 +9,17 @@
 The currently released version is @samp{@value{NIB2MOD-VERSION}}.
 @end ifclear
 
-@section Noteworthy changes in version @samp{0.8.0}
+@section Noteworthy changes in version @samp{0.8.6}
 
-Bug fixes, including a workaround for a bug in MacOSX 10.1.x.
+Update for new GNUstep directory layout. Update for MacOSX 10.2
 
 @c --------------------------------------------------------
 @c Don't need to include older changes in announce
 @ifclear ANNOUNCE-ONLY
+
+@section Noteworthy changes in version @samp{0.8.0}
+
+Bug fixes, including a workaround for a bug in MacOSX 10.1.x.
 
 @section Noteworthy changes in version @samp{0.7.0}
 
