--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 README
 ******
 
-This is version 0.8.0 of the GNUstep nib2gmodel tool
+This is version 0.8.6 of the GNUstep nib2gmodel tool
 
    GNUstep is a set of general-purpose Objective-C libraries based on
 the OpenStep standard developed by NeXT (now Apple) Inc. The libraries
@@ -9,8 +9,7 @@ consist of everything from foundation classes, such as dictionaries and
 arrays, to GUI interface classes such as windows, sliders, buttons, etc.
 
    nib2gmodel is a tool developed for GNUstep which converts Apple/NeXT
-OpenStep 4.x and MacOSX nib files (and perhaps other nib files) to the
-GNUstep version of a nib file called a gmodel file.
+OpenStep 4.x and MacOSX nib files to a GNUstep gmodel file.
 
    Note that nib2gmodel does a pretty good, but not a perfect job of
 translating nib files. Since the nib format is not documented,
@@ -25,22 +24,11 @@ manager, Gorm gets up to speed).
    The GNUstep web site at <http://www.gnustep.org> contains more
 information.
 
-How can you help?
-=================
-
-   * Check the bug list at the GNUstep web site, or subscribe to the
-     GNUstep newslists for information.  If you can volunteer for any
-     of the projects, or if you have any useful comments send email!
-     <discuss-gnustep@gnu.org>
-
-   * Give us feedback!  Tell us what you like; tell us what you think
-     could be better.  Send bug reports to <bug-gnustep@gnu.org>.
-
 Machines
 ========
 
-   GNUstep nib2gmodel has been compiled (in the past) on the following
-machines.
+   GNUstep nib2gmodel has been compiled (sometime in the past) on the
+following machines.
 
    * OpenStep 4.x/m68k
 
@@ -49,4 +37,6 @@ machines.
    * MacOS X Server 1.0
 
    * MacOS X 10.1
+
+   * MacOS X 10.2
 
