--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-18  Adam Fedor  <fedor@Eldorado.local.>
+
+	* configure.ac: Check for openstep4 host
+	* GNUmakefile.in: Set GNUSTEP_FLATTENED=yes
+
 2003-06-12  Adam Fedor  <fedor@gnu.org>
 
 	* Version: 0.8.6
