--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2003-08-18  Adam Fedor  <fedor@Eldorado.local.>
+2003-08-18  Adam Fedor  <fedor@gnu.org>
 
 	* configure.ac: Check for openstep4 host
 	* GNUmakefile.in: Set GNUSTEP_FLATTENED=yes
