--- a/Documentation/news.texi
+++ b/Documentation/news.texi
@@ -9,13 +9,17 @@
 The currently released version is @samp{@value{NIB2MOD-VERSION}}.
 @end ifclear
 
-@section Noteworthy changes in version @samp{0.8.6}
+@section Noteworthy changes in version @samp{0.9.0}
 
-Update for new GNUstep directory layout. Update for MacOSX 10.2
+Minor configuration fixes.
 
 @c --------------------------------------------------------
 @c Don't need to include older changes in announce
 @ifclear ANNOUNCE-ONLY
+
+@section Noteworthy changes in version @samp{0.8.6}
+
+Update for new GNUstep directory layout. Update for MacOSX 10.2
 
 @section Noteworthy changes in version @samp{0.8.0}
 
