* configure.ac: Use default prefix * GNUmakefile.in: Install in proper prefix location.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk@20135 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-24  Adam Fedor  <fedor@gnu.org>
+
+	* configure.ac: Use default prefix
+	* GNUmakefile.in: Install in proper prefix location.
+
 2003-12-26  Adam Fedor  <fedor@gnu.org>
 
 	* configure.ac: Fix setting of prefix.
