--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-25  Adam Fedor  <fedor@gnu.org>
+
+	* Version 0.9.0
+
 2004-09-24  Adam Fedor  <fedor@gnu.org>
 
 	* configure.ac: Use default prefix
