* GNUmakefile.in: Define OBJCFLAGS to null. (GNUSTEP_BUILD_ROOT): Define using prefix (which is the same place make installs it).
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk@20219 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-12  Adam Fedor  <fedor@gnu.org>
+
+	* GNUmakefile.in: Define OBJCFLAGS to null.
+	(GNUSTEP_BUILD_ROOT): Define using prefix (which is the same place 
+	make installs it).
+
 2004-09-25  Adam Fedor  <fedor@gnu.org>
 
 	* Version 0.9.0
