--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-26  Adam Fedor  <fedor@gnu.org>
+
+	* configure.ac, GNUmakefile.in: Use new make configuration options
+	* Documentation.texi: Update.
+
 2004-10-12  Adam Fedor  <fedor@gnu.org>
 
 	* GNUmakefile.in: Define OBJCFLAGS to null.
