--- a/Documentation/news.texi
+++ b/Documentation/news.texi
@@ -9,13 +9,18 @@
 The currently released version is @samp{@value{NIB2MOD-VERSION}}.
 @end ifclear
 
-@section Noteworthy changes in version @samp{0.9.0}
+@section Noteworthy changes in version @samp{0.11.0}
 
-Minor compilation fixes.
+Minor configuration changes. Fixes for getting information from buttons
+and pop-up buttons.
 
 @c --------------------------------------------------------
 @c Don't need to include older changes in announce
 @ifclear ANNOUNCE-ONLY
+
+@section Noteworthy changes in version @samp{0.9.0}
+
+Minor compilation fixes.
 
 @section Noteworthy changes in version @samp{0.8.6}
 
