--- a/INSTALL
+++ b/INSTALL
@@ -3,18 +3,18 @@ Installation
 
 This file documents the installation of the GNUstep nib2gmodel tool.
 
-Copyright (C) 1999 Free Software Foundation, Inc.  You may copy,
+   Copyright (C) 1999 Free Software Foundation, Inc.  You may copy,
 distribute, and modify it freely as long as you preserve this copyright
 notice and permission notice.
 
-   This is version 0.9.0 of nib2gmodel.
+   This is version 0.11.0 of nib2gmodel.
 
 Installing `nib2gmodel'
 =======================
 
-The nib2gmodel tool runs on OpenStep 4.x and MacOSX 10.x. It's possible
-it will run on other versions of OPENSTEP, if there are any, but it has
-not been tried yet.
+   The nib2gmodel tool runs on OpenStep 4.x and MacOSX 10.x. It's
+possible it will run on other versions of OPENSTEP, if there are any,
+but it has not been tried yet.
 
    Here is a quick-and-dirty example of installation commands:
 
@@ -33,7 +33,7 @@ extensions.  For special options you can add to configure, type
 Converting nibs
 ===============
 
-To convert a nib file, simply type something like
+   To convert a nib file, simply type something like
 
      nib2gmodel MyNib.nib MyNib.gmodel
 
