--- a/NEWS
+++ b/NEWS
@@ -1,50 +1,56 @@
 NEWS
 ****
 
-The currently released version is `0.9.0'.
+The currently released version is `0.11.0'.
+
+Noteworthy changes in version `0.11.0'
+======================================
+
+   Minor configuration changes. Fixes for getting information from
+buttons and pop-up buttons.
 
 Noteworthy changes in version `0.9.0'
 =====================================
 
-Minor compilation fixes.
+   Minor compilation fixes.
 
 Noteworthy changes in version `0.8.6'
 =====================================
 
-Update for new GNUstep directory layout. Update for MacOSX 10.2
+   Update for new GNUstep directory layout. Update for MacOSX 10.2
 
 Noteworthy changes in version `0.8.0'
 =====================================
 
-Bug fixes, including a workaround for a bug in MacOSX 10.1.x.
+   Bug fixes, including a workaround for a bug in MacOSX 10.1.x.
 
 Noteworthy changes in version `0.7.0'
 =====================================
 
-Bug fixes. NSSecureTextField support. Updated for changes in NSMenu
+   Bug fixes. NSSecureTextField support. Updated for changes in NSMenu
 code, and new NSWindow ivars.
 
 Noteworthy changes in version `0.6.5'
 =====================================
 
-Archiving of NSText and NSTextView was added. Better coding of
+   Archiving of NSText and NSTextView was added. Better coding of
 NSScrollView, NSButton, Menus, Cells. NSSliderCell added.
 
 Noteworthy changes in version `0.6.5'
 =====================================
 
-Menu and Popup Button translation has been fixed. Nib2gmodel now runs
-better on MacOSX.
+   Menu and Popup Button translation has been fixed. Nib2gmodel now
+runs better on MacOSX.
 
 Noteworthy changes in version `0.6.2'
 =====================================
 
-A few bug fixes in the gmodel code.
+   A few bug fixes in the gmodel code.
 
 Noteworthy changes in version `0.6.0'
 =====================================
 
-nib2gmodel has been ported to MacOSX.
+   nib2gmodel has been ported to MacOSX.
 
    Several bug fixes allow better translation of various classes,
 including NSBox and NSPopUpButton.
@@ -52,19 +58,19 @@ including NSBox and NSPopUpButton.
 Noteworthy changes in version `0.5.6'
 =====================================
 
-The package name has changed from nib2model to nib2gmodel. The name of
-the tool is still called nib2gmodel.
+   The package name has changed from nib2model to nib2gmodel. The name
+of the tool is still called nib2gmodel.
 
 Noteworthy changes in version `0.5.6'
 =====================================
 
-Some of the translation problems have been fixed. Still needs better
+   Some of the translation problems have been fixed. Still needs better
 testing.
 
 Noteworthy changes in version `0.5.5'
 =====================================
 
-This is the first release of the nib2gmodel tool on its own. It was
+   This is the first release of the nib2gmodel tool on its own. It was
 previouly (and still is) a part of the core libraries.
 
    There are known problems with this release. Worst of all being that
