--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-15  Adam Fedor  <fedor@gnu.org>
+
+	* GNUmakefile.in, test/test.m: Fix build issue
+
 2006-02-14  Adam Fedor  <fedor@gnu.org>
 
 	* Version 0.11.0
