--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-10  Adam Fedor  <fedor@gnu.org>
+
+	* test/test.m: Fix build issue.
+
 2006-02-15  Adam Fedor  <fedor@gnu.org>
 
 	* GNUmakefile.in, test/test.m: Fix build issue
