--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-06  Adam Fedor  <fedor@gnu.org>
+
+	* GNUmakefile.in: Correct some install issues. See bug #16109.
+
 2006-03-10  Adam Fedor  <fedor@gnu.org>
 
 	* test/test.m: Fix build issue.
