--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-02  Nicola Pero  <nicola.pero@meta-innovation.com>
+
+	* GNUmakefile.in: Replaced all occurrences of GNUSTEP_FLATTENED
+	with the new variable GNUSTEP_IS_FLATTENED.
+
 2006-04-06  Adam Fedor  <fedor@gnu.org>
 
 	* GNUmakefile.in: Correct some install issues. See bug #16109.
